add the evaluation files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,6 @@
 torch >= 1.12.1
-re
-sys
+sentence_transformers == 2.2.2
+evaluate == 0.4.0
 nltk
 args
-json
-time
-random
 requests
-argparse
-tqdm
-tabulate
-collections
